# algorithms

./: .gitignore  README.md  pyproject.toml
recursion/: fibonacci.py  test_fibonacci.py
search/: binary_search.py  test_binary_search.py
sort/: bubble_sort.py  test_bubble_sort.py
