[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Altynbek <go.gelleson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-benchmark = "^3.2.3"
pytest = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
